--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 notes.txt
+# Ignore build directory
+/build/
+
+# Ignore CMake cache and temporary files
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
+CTestTestfile.cmake
+
+# Ignore generated files
+*.swp
+*.swo
